# face_blur_pro

./: GEMINI.md  README.md  flutter_launcher_icons.yaml  pubspec.yaml
.agent/rules/: ai-rules-for-flutter-2.md  ai-rules-for-flutter.md
.agent/workflows/: project-guide.md
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
docs/: MEDIUM_ARTICLE.md  MEDIUM_ARTICLE_KO.md
integration_test/: simple_test.dart
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  web_io_stub.dart
lib/data/models/: my_face.dart
lib/domain/services/: image_processing_service.dart  tutorial_service.dart  web_face_service.dart  web_face_service_stub.dart  web_face_service_web.dart
lib/l10n/: app_en.arb  app_ja.arb  app_ko.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_ja.dart  app_localizations_ko.dart
lib/presentation/home/: home_screen.dart
lib/presentation/home/widgets/: face_box_painter.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: simple.dart  simple.freezed.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
macos/Runner/: DebugProfile.entitlements  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: simple.rs
web/: face_blur_web.js  index.html  manifest.json
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
